--- a/css/style.css
+++ b/css/style.css
@@ -1986,7 +1986,7 @@ body{font-size:16px;line-height:28px;font-family: 'Averia Serif Libre', cursive;
 }
 @media only screen and (min-width:320px) and (max-width:479px){.main-menu > ul > li{margin-right:0;}
 }
-.main-menu > ul > li a{font-size:14px;color:#233d63;font-weight:bold;-webkit-transition:all 0.3s;-moz-transition:all 0.3s;-ms-transition:all 0.3s;-o-transition:all 0.3s;transition:all 0.3s;position:relative;padding-bottom:33px;}
+.main-menu > ul > li a{font-size:14px;color:#233d63;font-weight:600;-webkit-transition:all 0.3s;-moz-transition:all 0.3s;-ms-transition:all 0.3s;-o-transition:all 0.3s;transition:all 0.3s;position:relative;padding-bottom:33px;}
 @media only screen and (min-width:768px) and (max-width:991px){.main-menu > ul > li a{display:-webkit-flex;display:-ms-flex;display:flex;-ms-flex-pack:justify;justify-content:space-between;padding-bottom:0;margin-bottom:10px;}
 }
 @media only screen and (min-width:480px) and (max-width:767px){.main-menu > ul > li a{display:-webkit-flex;display:-ms-flex;display:flex;-ms-flex-pack:justify;justify-content:space-between;padding-bottom:0;margin-bottom:10px;}
@@ -3273,6 +3273,16 @@ body{font-size:16px;line-height:28px;font-family: 'Averia Serif Libre', cursive;
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
-    font-weight: 500;
+    font-weight: 550;
     border: none;
+}
+
+.welcome {
+    font-size: 45px;
+    line-height: 1.2;
+}
+
+.sign {
+    font-size: 35px;
+    line-height: 1.3;
 }
